--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <img src="Giovana_e_celular.jpeg" alt="Nosso Ano" width="600" height="400">
 
-<img src="Metadinha_Kavin" alt="Nosso Ano" width="600" height="400">
+<img src="Metadinha_Kavin.jpeg" alt="Nosso Ano" width="600" height="400">
 
 <img src="Metadinha_MJ.jpeg" alt="Nosso Ano" width="600" height="400">
 
