--- a/index.html
+++ b/index.html
@@ -4,27 +4,40 @@
 <h1>Apenas um diário de fotos que contam uma história</h1>
 <p>#caminhos-da-vida</p>
 
+  
+<p>#caminhos-da-vida</p>
+
 <img src="Snapchat.jpeg" alt="Nosso Ano" width="400" height="600">
-
+<p>Bem vibes</p>
+  
 <img src="Trote_e_Harold.jpeg" alt="Nosso Ano" width="600" height="400">
-
+<p>Foi uma breguice e ainda teve penetra</p>
+  
 <img src="Scooby_e_Salsicha_carão.jpeg" alt="Nosso Ano" width="600" height="400">
-
+<p>Dia de cäo mesmo</p>
+  
 <img src="Scooby_e_Salsicha_sorriso.jpeg" alt="Nosso Ano" width="600" height="400">
-
+<p>Dupla imbativel</p>
+  
 <img src="Brega_no_espelho.jpeg" alt="Nosso Ano" width="600" height="400">
-
+<p>Refletindo a nossa beleza</p>
+  
 <img src="maquiagem_interclasse.jpeg" alt="Nosso Ano" width="600" height="400">
-
+<p>Roxo campeäo</p>
+  
 <img src="Babyface.jpeg" alt="Nosso Ano" width="600" height="400">
-
+<p>Rostinho de baby</p>
+  
 <img src="Vitória_péssima_aluna.jpeg" alt="Nosso Ano" width="400" height="600">
-
+<p>Vida de estudante</p>
+  
 <img src="Giovana_e_celular.jpeg" alt="Nosso Ano" width="400" height="600">
-
+<p> Aluna nota 10</p>
+  
 <img src="Metadinha_Kavin.jpeg" alt="Nosso Ano" width="400" height="600">
-
+<p> Playboy que eu amo</p>
+  
 <img src="Metadinha_MJ.jpeg" alt="Nosso Ano" width="400" height="600">
-
+<p>Mafioso da Vick</p>
 
 
