--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   
 <header>NOSSA GALERIA<header>
 <h1>Apenas um diário de fotos que contam uma história</h1>
+  
 <p>#caminhos-da-vida</p>
 
   
@@ -21,7 +22,7 @@
   
 <img src="Brega_no_espelho.jpeg" alt="Nosso Ano" width="600" height="400">
 <p>Refletindo a nossa beleza</p>
-  
+
 <img src="maquiagem_interclasse.jpeg" alt="Nosso Ano" width="600" height="400">
 <p>Roxo campeäo</p>
   
@@ -40,4 +41,17 @@
 <img src="Metadinha_MJ.jpeg" alt="Nosso Ano" width="400" height="600">
 <p>Mafioso da Vick</p>
 
+    body {
+    color: white;
+    background: black;
+    margin: 0px;
+}
+
+header {
+    border-bottom: solid 2px rgb(42, 122, 228);
+    padding: 20px;
+    font-size: 32px;
+    color: rgb(42, 122, 228);
+}
+  
 
