--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
+<head>
+   <link rel= "stylesheet" href="styles.css" />
+</head>
+
 <body>
-  
+
 <header>NOSSA GALERIA<header>
 <h1>Apenas um diário de fotos que contam uma história</h1>
   
@@ -41,17 +45,5 @@
 <img src="Metadinha_MJ.jpeg" alt="Nosso Ano" width="400" height="600">
 <p>Mafioso da Vick</p>
 
-    body {
-    color: white;
-    background: black;
-    margin: 0px;
-}
 
-header {
-    border-bottom: solid 2px rgb(42, 122, 228);
-    padding: 20px;
-    font-size: 32px;
-    color: rgb(42, 122, 228);
-}
-  
 
