--- a/index.html
+++ b/index.html
@@ -13,37 +13,37 @@
 <p>#caminhos-da-vida</p>
 
 <img src="Snapchat.jpeg" alt="Nosso Ano" width="400" height="600">
-<p>Bem vibes</p>
+<p>BEM VIBES</p>
   
 <img src="Trote_e_Harold.jpeg" alt="Nosso Ano" width="600" height="400">
-<p>Foi uma breguice e ainda teve penetra</p>
+<p>FOI UMA BREGUICE E AINDA TEVE PENETRA</p>
   
 <img src="Scooby_e_Salsicha_carão.jpeg" alt="Nosso Ano" width="600" height="400">
-<p>Dia de cäo mesmo</p>
+<p>DIA DE CÃO MESMO</p>
   
 <img src="Scooby_e_Salsicha_sorriso.jpeg" alt="Nosso Ano" width="600" height="400">
-<p>Dupla imbativel</p>
+<p>DUPLA IMPATIVEL</p>
   
 <img src="Brega_no_espelho.jpeg" alt="Nosso Ano" width="600" height="400">
-<p>Refletindo a nossa beleza</p>
+<p>REFLETINDO A NOSSA BELEZA</p>
 
 <img src="maquiagem_interclasse.jpeg" alt="Nosso Ano" width="600" height="400">
-<p>Roxo campeäo</p>
+<p>ROXO CAMPEÃO</p>
   
 <img src="Babyface.jpeg" alt="Nosso Ano" width="600" height="400">
-<p>Rostinho de baby</p>
+<p>ROSTINHO BABY</p>
   
 <img src="Vitória_péssima_aluna.jpeg" alt="Nosso Ano" width="400" height="600">
-<p>Vida de estudante</p>
+<p>VIDA DE ESTUDANTE</p>
   
 <img src="Giovana_e_celular.jpeg" alt="Nosso Ano" width="400" height="600">
-<p> Aluna nota 10</p>
+<p> ALUNA NOTA 10</p>
   
 <img src="Metadinha_Kavin.jpeg" alt="Nosso Ano" width="400" height="600">
-<p> Playboy que eu amo</p>
+<p> PLAYBOY QUE EU AMO</p>
   
 <img src="Metadinha_MJ.jpeg" alt="Nosso Ano" width="400" height="600">
-<p>Mafioso da Vick</p>
+<p>MAFIOSO DA VICKS</p>
 
 
 
