--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 <h1>Apenas um diário de fotos que contam uma história</h1>
   
 <p>#caminhos-da-vida</p>
-
   
-<p>#caminhos-da-vida</p>
+<p>#as-de-vdd</p>
 
 <img src="Snapchat.jpeg" alt="Nosso Ano" width="400" height="600">
 <p>BEM VIBES</p>
@@ -22,7 +21,7 @@
 <p>DIA DE CÃO MESMO</p>
   
 <img src="Scooby_e_Salsicha_sorriso.jpeg" alt="Nosso Ano" width="600" height="400">
-<p>DUPLA IMPATIVEL</p>
+<p>DUPLA IMBATíVEL</p>
   
 <img src="Brega_no_espelho.jpeg" alt="Nosso Ano" width="600" height="400">
 <p>REFLETINDO A NOSSA BELEZA</p>
@@ -44,6 +43,9 @@
   
 <img src="Metadinha_MJ.jpeg" alt="Nosso Ano" width="400" height="600">
 <p>MAFIOSO DA VICKS</p>
+
+
+   
 
 
 
